--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,13 @@ set(OpenCV_DIR "C:/Users/svangurp/opencv/build")
 
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
-
+include_directories(${CMAKE_SOURCE_DIR}/src)
 # Specify the output directory for the executable
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
 # Add the executable target using the source file(s)
-add_executable(MyCMakeProject src/main.cpp)
+add_executable(MyCMakeProject src/main.cpp
+                              src/Image.cpp
+                              src/Compressor.cpp)
 
 target_link_libraries(MyCMakeProject ${OpenCV_LIBS})
