Add VSCode configuration files for debugging and building C++ projects

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,19 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "Debug (MSVC)",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/your_executable_name.exe",  // Replace with your executable name
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "preLaunchTask": "build",  // Trigger build before launching debugger
+            "internalConsoleOptions": "openOnSessionStart"
+        }
+    ]
 }
