Update VSCode configuration for C++ debugging and add build task

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,10 @@
         "xloctime": "cpp",
         "xmemory": "cpp",
         "xstddef": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "any": "cpp",
+        "condition_variable": "cpp",
+        "unordered_set": "cpp",
+        "variant": "cpp"
     }
 }
