--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug (MSVC)",
+            "name": "C++ Debug (MSVC)",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/your_executable_name.exe",  // Replace with your executable name
+            "program": "${workspaceFolder}/build/bin/Debug/MyCMakeProject.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true,
-            "preLaunchTask": "build",  // Trigger build before launching debugger
-            "internalConsoleOptions": "openOnSessionStart"
+            "console": "externalTerminal",
+            "preLaunchTask": "CMake: build"
         }
     ]
 }
+
