--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,13 +49,13 @@ FetchContent_MakeAvailable(googletest)
 
 # Create a test executable
 add_executable(MyTests
-    # tests/test_main.cpp
-    # tests/test_Image.cpp
-    # tests/test_Compressor.cpp
-    # tests/test_DFT.cpp
-    # tests/test_DCT.cpp
-    # tests/test_SparseRepresentation.cpp
-    # tests/test_TwoDimDCT.cpp
+    tests/test_main.cpp
+    tests/test_Image.cpp
+    tests/test_Compressor.cpp
+    tests/test_DFT.cpp
+    tests/test_DCT.cpp
+    tests/test_SparseRepresentation.cpp
+    tests/test_TwoDimDCT.cpp
     tests/test_ImageChopper.cpp
 
     src/DCT/DCT.cpp
