Add DCTEncoding class that handels the enocding steps.  changed methods to support template types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ add_library(CompressionCalc STATIC
                               src/DCT/DCTCompression.cpp
                               src/DCT/DCTTransformationHandler.cpp
                               src/DCT/QuantizationTable.cpp
-                              src/DCT/ZigzagDCTcoefficientsOrder.cpp)
+                              src/DCT/ZigzagDCTcoefficientsOrder.cpp
+                              src/DCT/DCTEncoding.cpp)
 
 # make main executable and link it with the CompressionCalc and OpenCV
 add_executable(MyCMakeProject src/main.cpp)
