--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,9 @@ add_library(CompressionCalc STATIC
                               src/DCT/DCTTransformationHandler.cpp
                               src/DCT/QuantizationTable.cpp
                               src/DCT/ZigzagDCTcoefficientsOrder.cpp
-                              src/DCT/DCTEncoding.cpp)
+                              src/DCT/DCTEncoding.cpp
+                              src/DCT/StoreDCTData.cpp
+                              )
 
 # make main executable and link it with the CompressionCalc and OpenCV
 add_executable(MyCMakeProject src/main.cpp)
