--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,14 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 add_library(CompressionCalc STATIC 
                               src/Image.cpp
                               src/RunLengthEnoding.h
+                              src/BaseCompressedImageHolder.h
+                              src/CompressionLevel.h
 
                               src/DFT/DFTCompressor.cpp
                               src/DFT/SparseRepresentation.cpp
                               src/DFT/StoringData.cpp
                               src/DFT/DFT.cpp
-                              src/DFT/ComplexRowColumnValue.cpp
+                              src/DFT/CompressedDFTImageHolder.cpp
 
                               src/DCT/DCT.cpp
                               src/DCT/TwoDimDCT.cpp
@@ -36,7 +38,7 @@ add_library(CompressionCalc STATIC
                               src/DCT/ZigzagDCTcoefficientsOrder.cpp
                               src/DCT/DCTEncoding.cpp
                               src/DCT/StoreDCTData.cpp
-                              src/DCT/CompressedImageHolder.h
+                              src/DCT/CompressedDCTImageHolder.h
                               )
 
 # make main executable and link it with the CompressionCalc and OpenCV
